--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+Главная страница
+{% endblock %}
 {% block content %}
     <h1>Главная страница</h1>
 
@@ -16,12 +19,11 @@
         <br>
 
     {% endfor %}
+    <a href="{% url 'post-create' %}"><button>Создать запись</button></a>
+    <br>
 
 
     <a href="{% url 'about-view' %}">О нас</a>
     <a href="{% url 'contacts-view' %}">Контакты</a>
 {% endblock %}
-
-
-
 
