--- a/templates/blog/post_create.html
+++ b/templates/blog/post_create.html
@@ -1,6 +1,17 @@
 {% extends 'base.html' %}
+{% block title %}
+Создать
+{% endblock %}
 {% block content %}
-<h1>Geeks</h1>
+
+    <form action="" method="post">
+    {% csrf_token %}
+
+        {{ form.as_p}}
+
+        <button type="submit">Создать запись</button>
+
+    </form>
+
     <a href="{% url 'index-page' %}">На главную</a>
-    <a href="{% url 'about-view' %}">О нас</a>
 {% endblock %}
