--- a/templates/blog/post_update.html
+++ b/templates/blog/post_update.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
+{% block title %}
+Обновить запись
+{% endblock %}
 {% block content %}
-<h1>Geeks</h1>
+    <form action="" method="post">
+    {% csrf_token %}
+
+        {{ form.as_p}}
+
+        <button type="submit">Обновить запись</button>
+
+    </form>
     <a href="{% url 'index-page' %}">На главную</a>
-    <a href="{% url 'about-view' %}">О нас</a>
 {% endblock %}
