--- a/templates/blog/post_delete_confim.html
+++ b/templates/blog/post_delete_confim.html
@@ -8,6 +8,7 @@
     <form action="{% url 'post-delete-confirm' post.pk %}" method="post">
         {% csrf_token %}
         <input type="submit" name="delete" value="Да, удалить" class="btn btn-danger">
-        <a href="{% url 'post-detail' post.pk %}" class="btn btn-default">Нет, отменить</a>
+        <!-- <a href="{% url 'post-detail' post.pk %}" class="btn btn-default">Нет, отменить</a> -->
+        <a href="{% url 'post-detail' post.pk %}"><button>Back</button></a>
     </form>
 {% endblock %}
